[gd_scene load_steps=57 format=3 uid="uid://bb0yoc2888fyf"]

[ext_resource type="Script" uid="uid://drfn4t3ilpdkk" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://d1mhs4qxblrlr" path="res://art/character/player.png" id="2_qhqgy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_76oay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"back_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}],
"loop": true,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}],
"loop": true,
"name": &"front_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}],
"loop": true,
"name": &"side_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}],
"loop": true,
"name": &"side_walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 29.0

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
script = ExtResource("1_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_76oay")
animation = &"side_attack"
offset = Vector2(0, -15)

[node name="PlayerHitBox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="HitCollision" type="CollisionShape2D" parent="PlayerHitBox"]
light_mask = 3
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_qhqgy")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_damage_timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 1439
limit_bottom = 901
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cliffsidecamera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="healthBar" type="ProgressBar" parent="."]
modulate = Color(0.368627, 0.839216, 0.227451, 1)
offset_left = -6.0
offset_top = -18.0
offset_right = 124.0
offset_bottom = -1.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regen_timer" type="Timer" parent="."]
autostart = true

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="PlayerHitBox" to="." method="_on_PlayerHitBox_body_entered"]
[connection signal="body_exited" from="PlayerHitBox" to="." method="_on_PlayerHitBox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_damage_timer" to="." method="_on_deal_damage_timer_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
